@@ -2,7 +2,7 @@
 <window>
     <defaultcontrol always="true">901</defaultcontrol>
     <allowoverlay>yes</allowoverlay>
-    <visible>!Window.IsActive(DialogSubtitles.xml) + !Window.IsActive(script-XBMC-Subtitles-main.xml) + !Window.IsVisible(fullscreeninfo) + [VideoPlayer.IsFullscreen + !Window.IsVisible(visualisation)] + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]</visible>
+    <visible>!Window.IsActive(DialogSubtitles.xml) + !Window.IsVisible(fullscreeninfo) + [VideoPlayer.IsFullscreen + !Window.IsVisible(visualisation)] + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]</visible>
     <controls>
         <control type="group">
             <posx>col-1-begin</posx>
@@ -37,7 +37,7 @@
                 <shadowcolor>-</shadowcolor>
             </control>
 			<control type="label">
-				<visible>Player.Paused</visible>
+				<visible>Player.Paused + !Player.Caching</visible>
                 <posx>3-col</posx>
                 <posy>-12</posy>
                 <width>16-col-gutter</width>
@@ -46,6 +46,16 @@
                 <label>112</label>
                 <shadowcolor>-</shadowcolor>
             </control>
+			<control type="label">
+				<description>buffering</description>
+				<posx>3-col</posx>
+                <posy>-12</posy>
+				<width>16-col-gutter</width>
+                <font>smallStrong</font>
+                <textcolor>selected</textcolor>
+				<label>$LOCALIZE[15107] $INFO[Player.CacheLevel]%</label>
+				<visible>[Player.Paused + Player.Caching] + !Player.Seeking</visible>
+			</control>
 			<control type="label">
 				<visible>System.HasMediaDVD</visible>
                 <posx>21-col</posx>
