@@ -14,8 +14,8 @@
                 <height>12-row</height>
                 <onleft>9000</onleft>
                 <onright>60</onright>
-                <ondown>50</ondown>
-                <onup>50</onup>
+                <ondown>51</ondown>
+                <onup>51</onup>
                 <pagecontrol>60</pagecontrol>
                 <scrolltime tween="sine" easing="inout">200</scrolltime>
                 <itemlayout width="12-col" height="1-row">
@@ -393,8 +393,8 @@
                 <height>12-row</height>
                 <onleft>9000</onleft>
                 <onright>60</onright>
-                <ondown>53</ondown>
-                <onup>53</onup>
+                <ondown>56</ondown>
+                <onup>56</onup>
                 <pagecontrol>60</pagecontrol>
                 <scrolltime tween="sine" easing="inout">200</scrolltime>
                 <itemlayout width="14-col" height="1-row">
@@ -527,15 +527,14 @@
             <posx>0</posx>
             <posy>3-row</posy>
             <control type="panel" id="59">
-                <visible></visible>
                 <posx>0</posx>
                 <posy>4</posy>
                 <width>21-col</width>
                 <height>12-row</height>
                 <onleft>9000</onleft>
                 <onright>60</onright>
-                <ondown>50</ondown>
-                <onup>50</onup>
+                <ondown>59</ondown>
+                <onup>59</onup>
                 <pagecontrol>60</pagecontrol>
                 <scrolltime tween="sine" easing="inout">200</scrolltime>
                 <itemlayout width="21-col" height="1-row">
